# djyolo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/djyolo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolo11n.ncnn.param  yolo11s.ncnn.param
app/src/main/java/com/example/djyolo/: CameraNcnnActivity.kt  CameraTfliteActivity.kt  MainActivity.kt
app/src/main/java/com/example/djyolo/bean/: NNDetObj.java
app/src/main/java/com/example/djyolo/detector/: YOLO11Ncnn.java
app/src/main/java/com/example/djyolo/detector/tflite/: ITFliteDetector.java  Recognition.java  Yolov11TFLiteDetector.java  Yolov5TFLiteDetector.java
app/src/main/java/com/example/djyolo/mediapipe/facemesh/: FaceMeshMainActivity.java  FaceMeshResultGlRenderer.java  FaceMeshResultImageView.java
app/src/main/java/com/example/djyolo/mediapipe/hands/: HandGestureDetector.java  (+3 more)
app/src/main/java/com/example/djyolo/util/: Camera2Util.java  ImageAnalyse.java  ImageProcess.java  PostProcessUtils.java  ThreadUtil.java
app/src/main/java/com/example/djyolo/view/: AutoFitTextureView.kt
app/src/main/jni/: CMakeLists.txt  yolo11.cpp  yolo11.h  yolo11_stripcv_det.cpp  yolo11ncnn.cpp  yolo5_hand_ges.cpp
app/src/main/res/layout/: activity_camera.xml  activity_camera_tflite.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/djyolo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
